--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,6 +29,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/overview">Overview</a>
             </li>
+            <a class="nav-link" href="/timeline">Timelines</a>
             <a class="nav-link" href="/logout">Logout</a>
           <% } else { %>
           <a class="nav-link" href="/login">Login</a>
