--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -12,11 +12,11 @@
 </form>
 
 <h3>Select a character</h3>
-<div class="char-list">
+<div class="data-list">
   <% data.forEach(c => { %>
   <form action="/select" method="post">
-    <div class="char-list-item">
-      <button class="char-button" value="<%= c.name %>" name="character">
+    <div class="data-list-item">
+      <button class="data-button" value="<%= c.name %>" name="character">
         <%= c.name %>
       </button>
       <input type="hidden" name="id" value="<%= c._id %>" />
