Amend responsiveness and timeline tweaks

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -120,6 +120,13 @@ label {
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: auto;
   margin: 0px 100px;
+  width: 50%;
+}
+
+.data-wrap {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
 }
 
 .data-list-item {
@@ -128,7 +135,7 @@ label {
 }
 
 .init-form {
-  padding: 50px 100px;
+  padding: 20px 50px;
 }
 
 .info {
@@ -145,6 +152,12 @@ footer {
   margin-top: auto;
   text-align: center;
   padding: 20px;
+}
+
+@media (min-width: 1600px) {
+  .init-form {
+    margin: 0px 300px;
+  }
 }
 
 @media (max-width: 800px) {
