Add date and time to header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -60,6 +60,17 @@
             </li>
           </ul>
         </li>
+        <li>
+          <!-- clock -->
+          <div class="clock nav-link">
+            00:00:00
+          </div>
+        </li>
+        <li>
+          <div class="date nav-link">
+            1st January 2024
+          </div>
+        </li>
       </ul>
     </div>
   </div>
