--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -67,6 +67,9 @@
           </div>
         </li>
         <li>
+          <div class="nav-link toggle"></div>
+        </li>
+        <li>
           <div class="date nav-link">
             1st January 2024
           </div>
