--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -19,8 +19,17 @@
     </form>
     <% }); %>
   </div>
-  <% } %>
 </div>
+
+<div class="info-box">
+  <p class="info2">
+    The timeline structure is centered around the Three Act Structure. Find out
+    more <a href="https://kindlepreneur.com/three-act-structure/">here</a>. Each
+    section will be labelled according to this structure, but any 'rules' beyond
+    that are yours to break.
+  </p>
+</div>
+<% } %>
 
 <!-- timeline form -->
 <% if(locals.result) { %>
