--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <!-- FOR EXPANSION TO MULTI USER -->
 
 <div class="call-box">
-  <h2>Create an account here</h2>
+  <h2>Create an account</h2>
+  <p>or <a href="/login">Login here</a></p>
 
   <form class="signup-form" action="/signup" method="post">
     <div class="mb-3">
