--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -1,4 +1,5 @@
-<h1>Characters</h1>
+<h1>Hello, <%= username %></h1>
+<h2>Characters</h2>
 
 <% if(locals.data) { %>
 <form class="option-form" action="/sort" method="post">
