--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,11 @@
     >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">CharDev</a>
+          <%if(isAuthenticated) {%>
+            <a class="nav-link active" aria-current="page" href="/overview">CharDev</a>
+          <%} else { %>
+            <a class="nav-link active" aria-current="page" href="/">CharDev</a>
+            <% } %>
         </li>
         <li class="nav-item">
           <% if(isAuthenticated) { %>
